--- a/advent_2024/Cargo.toml
+++ b/advent_2024/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 name = "day_one"
 path = "src/day_one/main.rs"
 
+[[bin]]
+name = "day_two"
+path = "src/day_two/main.rs"
+
 [dependencies]
